[project]
name = "hochreiter"
version = "0.1.0"
description = ""
authors = [
    {name = "Kim Young Jin",email = "kimyoungjin1001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
